# jeddinformatics

./: .gitignore  README.md  highchart_json_to_csv.py  oncodb_to_csv.py  plot_data.py  pyproject.toml  requirements.txt
.github/workflows/: lint_and_test_and_deploy.yml
src/jeddinformatics/: .dirignore  .fileignore  __main__.py  config.json  convert_and_plot.py  generate_types.py  highchart_json_to_csv.py  oncodb_to_csv.py  plot_data.py  schema.json
tests/: test_stub.py
